# unreal-niagara-mcp

./: CLAUDE.md  README.md  pyproject.toml
NiagaraMCPBridge/: NiagaraMCPBridge.uplugin  README.md
NiagaraMCPBridge/Source/NiagaraMCPBridge/: NiagaraMCPBridge.Build.cs
NiagaraMCPBridge/Source/NiagaraMCPBridge/Private/: NiagaraBatchLibrary.cpp  NiagaraDILibrary.cpp  NiagaraHLSLLibrary.cpp  NiagaraMCPBridgeModule.cpp  NiagaraModuleLibrary.cpp  NiagaraParameterLibrary.cpp  NiagaraRendererLibrary.cpp  NiagaraSystemLibrary.cpp
NiagaraMCPBridge/Source/NiagaraMCPBridge/Public/: NiagaraBatchLibrary.h  NiagaraDILibrary.h  NiagaraHLSLLibrary.h  (+4 more)
src/unreal_niagara_mcp/: __init__.py  __main__.py  config.py  editor_bridge.py  server.py
src/unreal_niagara_mcp/analysis/: audit_tools.py  dream_tools.py  hlsl_output_tools.py  stats_tools.py  summary_tools.py
src/unreal_niagara_mcp/creation/: creation_tools.py  preset_tools.py
src/unreal_niagara_mcp/editing/: batch.py  emitter_editing.py  module_editing.py  parameter_editing.py  system_editing.py
src/unreal_niagara_mcp/inspection/: data_interface_tools.py  event_tools.py  module_tools.py  parameter_tools.py  renderer_tools.py  sim_stage_tools.py  system_tools.py
src/unreal_niagara_mcp/procedural/: curve_tools.py  distribution_tools.py  hlsl_tools.py  system_gen_tools.py  variation_tools.py
src/unreal_niagara_mcp/search/: discovery_tools.py  search_tools.py
tests/: test_analysis.py  test_creation.py  test_editing.py  test_editor_bridge.py  test_inspection.py  test_integration.py  test_procedural.py  test_search.py
