[project]
name = "unreal-niagara-mcp"
version = "0.2.0"
description = "Niagara particle system intelligence for Unreal Engine AI development via MCP"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
unreal-niagara-mcp = "unreal_niagara_mcp.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unreal_niagara_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
